# UraniumEngine

./: .gitignore  CMakeLists.txt  Core.sln  README.md  UraniumEngine.sln
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/androidTest/java/uranium/uranium/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: native-lib.cpp
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/java/uranium/uranium/: ExampleUnitTest.java
Core/: AddGraphic3DComponent.h  Core.cpp  Core.h  Core.vcxproj  Core.vcxproj.filters  ErrorCode.h  GLExtensions.cpp  InputContexMessagest.h  InputEvent.h  MessageBus.cpp  MessageBus.h  MessageClient.cpp  MessageClient.h  OSFramework.h  OSGLGraphicsSubSystem.h  OSInputSubSystem.h  OSMessages.h  OSNetworkSubSystem.h  OpenGL.h  PositionUpdate.h  RemoveCameraComponent.h  RemoveTransformComponent.h  RenderMessage.h  Source.cpp  SwapQueue.cpp  ThreadPool.h  TickMessage.h  WinMain.cpp  WindowEvent.h  WindowsGLGraphicsSubSystem.cpp  WindowsGLGraphicsSubSystem.h  WindowsInputSubSystem.cpp  WindowsInputSubSystem.h  WindowsNetworkSubSystem.cpp  WindowsNetworkSubSystem.h  WindowsOSFramework.cpp  WindowsOSFramework.h
Data/: 2DFontShader.frag  2DFontShader.vert  3dshader.frag  3dshader.vert  input.xml  network.txt  systems.txt
core/: CMakeLists.txt
core/headers/: AddCameraComponent.h  AddTransformComponent.h  Core.h  CreateEntity.h  DeleteEntity.h  IResourceManager.h  InputEvent.h  MessageBus.h  OSFramework.h  OSInputSubSystem.h  OSMessages.h  RemoveGraphic3DComponent.h  RotationUpdate.h  ScaleUpdate.h  SwapQueue.h  System.h  TransformUpdate.h  UserInputEvent.h  WindowsGLGraphicsSubSystem.h  WindowsInputSubSystem.h  WindowsOSFramework.h
core/src/: Core.cpp  WinMain.cpp  WindowsGLGraphicsSubSystem.cpp  WindowsNetworkSubSystem.cpp  WindowsOSFramework.cpp  main.cpp
(+45 files in other folders)
